added booking function + mail notifications
